--- a/src/index.css
+++ b/src/index.css
@@ -72,8 +72,67 @@
   display: none;
 } */
 
+.para{
+  position: absolute;
+  top: 200px;
+  left: 100px;
+  font-size: 29px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+}
+.search{
+  position: absolute;
+  top: 250px;
+  left: 820px;
+}
+.search input{
+  font-size: 15px;
+  padding:12px 10px;
+  width: 300px;
+  border-radius: 5px;
+  outline: none;
+  box-shadow: 3px 3px rgb(192, 190, 190);
+  margin-right: 8px;
+  color: rgb(82, 65, 240);
+}
+
+.search button{
+  font-size: 30px;
+  justify-content: center;
+  position:absolute;
+  top: 1px;
+  border-radius: 3px;
+  padding: 5px;
+
+}
+.search button:hover{
+  background-color: blue;
+}
+
 /* css for package page or product page */
 
 .container{
   width: 310px;
+}
+
+@media  screen and (max-width:576px) {
+  .para{
+    position: absolute;
+    top: 170px;
+    left: 100px;
+    font-size: 29px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+  }
+  .search{
+    position: absolute;
+    top: 350px;
+    left: 90px;
+  }
+  .contains{
+    position: relative;
+    left: 50px;
+    padding: 20px;
+  }
+  
 }
