--- a/src/index.css
+++ b/src/index.css
@@ -112,8 +112,9 @@
 /* css for package page or product page */
 
 .container{
-  width: 310px;
+  width: 360px;
 }
+
 
 @media  screen and (max-width:576px) {
   .para{
@@ -136,3 +137,7 @@
   }
   
 }
+
+/* @media screen and (max-width:1026px){
+  .containe
+} */
